Correcting bug on stars on Firefox 9

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -413,9 +413,10 @@ body {
       , .stars4
       , .stars5 {
         background: url(../images/sprite.png) no-repeat -479px -400px;
-        position: absolute;
-        width: 100%;
+        display: block;
         height: 23px;
+        position: absolute;
+        width: 125px;
       }
 
       .stars0 {
